force-app/main/default/objects/Invoice_Line_Item__c/fields/SGST_UTGST_Rate_for_Invoice_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Rate_for_Invoice_Amount_TI__c</fullName>
    <label>SGST/UTGST Rate for Invoice Amount (L)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>