force-app/main/default/objects/Invoice_Line_Item__c/fields/Sno__c.field-meta.xml
<CustomField>
    <fullName>Sno__c</fullName>
    <label>Sno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>