force-app/main/default/objects/Invoice_Line_Item__c/fields/Taxable_Advance_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Advance_Received_Amount__c</fullName>
    <formula>Opportunity_Name__r.Payment_Receipt_Base_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>