force-app/main/default/objects/Invoice_Line_Item__c/fields/Taxable_Advance_Received_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Advance_Received_Amount_TI__c</fullName>
    <label>Base Amount Received (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>