force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Balance__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>