force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Amount_for_Amount_Recd__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_Amount_Recd__c</fullName>
    <formula>Taxable_Advance_Received_Amount__c + (Taxable_Advance_Received_Amount__c  * GST_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>