force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Amount_for_invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_invoice_Amount__c</fullName>
    <formula>/*Invoice_Taxable_Amount__c +(CEILING(Invoice_Taxable_Amount__c) *  GST_Rate__c )*/
 Total_Invoice_Amount_WF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount O</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>