force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Amount_for_invoice_Amount_TI__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_invoice_Amount_TI__c</fullName>
    <label>Total Invoice Amount O (Locked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>