force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Invoiced__c</fullName>
    <formula>/*Value(Text(Invoice_Taxable_Amount__c +(Invoice_Taxable_Amount__c * GST_Rate__c )))*/
VALUE(TEXT( Total_Invoice_Amount_WF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>