force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Invoice_Amount_WF__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_WF__c</fullName>
    <label>Total Invoice Amount WF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>