force-app/main/default/objects/Invoice_Line_Item__c/fields/Volume_of_Debt_Balance_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Volume_of_Debt_Balance_Sheet__c</fullName>
    <formula>Opportunity_Name__r.VoD_in_crore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume of Debt/Balance Sheet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>