force-app/main/default/objects/Invoice_Line_Item__c/validationRules/INVLI_Creation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>INVLI_Creation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Opportunity_Name__r.Instrument_type_4__c, &apos;Monitoring Activity&apos;), 
  	 ISPICKVAL(Opportunity_Name__r.Billing_Duration__c, &apos;&apos;) 
				)</errorConditionFormula>
    <errorMessage>Billing Duration on opportunity is mandatory</errorMessage>
</ValidationRule>