force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Opportunity_Name_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Name_mandatory</fullName>
    <active>true</active>
    <description>When Is First InvoiceLine Item is true then Opportunity Cannot be null</description>
    <errorConditionFormula>AND(isFirst_InvoiceLine_Item__c = True , Opportunity_Name__c = NULL)</errorConditionFormula>
    <errorMessage>Please select Opportunity</errorMessage>
</ValidationRule>