force-app/main/default/objects/Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_No__c</columns>
    <columns>Instruments__c</columns>
    <columns>Invoice_Taxable_Amount__c</columns>
    <columns>Total_Amount_Balance__c</columns>
    <columns>Total_Amount_for_Amount_Recd__c</columns>
    <columns>Total_Amount_for_invoice_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>